fix: text contrast

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,6 +98,11 @@ padding: 15px;
 margin-bottom: 15px;
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 1; /* Firefox */
+}
+
 @media only screen and (max-device-width: 420px)  {
 	.information{
 		width: 100%;
